--- a/Day44/6.4 Motivation Meme Project/index.html
+++ b/Day44/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,26 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+<div>
+<h1>Inspiration</h1>
+<img src="./assets/images/daenerys.jpeg">
+<p>Dragons are the best</p>
+</div>
+
+</body>
+</html>
